<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Whisper</string>

    <string name="default_web_client_id">823234133694-ee5h5spupj47lb8qhv2rh2b28ndnkbr9.apps.googleusercontent.com</string>

    <!--    Login Page-->
    <!--    Login-->
    <string name="login_title">Login</string>
    <string name="login_desc">Enter your credentials</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="reset_password">Forgot Password?</string>
    <string name="google_login">Login with Google</string>
    <string name="another_option">Or</string>
    <string name="new_account">Don\'t have account?</string>

    <!--    Login with mobile-->
    <string name="mobile_login">Login with Mobile Number</string>
    <string name="verify_mobile">Verify Mobile Number</string>
    <string name="verify_mobile_desc">You\'r mobile number is safe with us, But we\'re recommending you to use email</string>
    <string name="mobile">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>

    <!--    Register with mobile-->
    <string name="mobile_register">Sign up with Mobile Number</string>

    <!--    New User/ Registration -->
    <string name="register_title">Sign Up</string>
    <string name="register_desc">Your date is safe with us</string>
    <string name="confirm_password">Confirm password</string>
    <string name="verify_email">Verify email</string>
    <string name="google_register">Continue with Google</string>
    <string name="login">Login</string>
    <string name="already_have_account">Already have account?</string>

    <!--    Greeting-->
    <string name="title_message">Privacy Simplified.</string>

    <!--    Bottom navigation bar-->
    <string name="home_page">Home</string>
    <string name="chat_page">Chat</string>
    <string name="reel_page">Reels</string>
    <string name="profile_page">Profile</string>

    <!--    Home fragment toolbar-->
    <string name="search">Search</string>
    <string name="create_post">Create post</string>

    <!--    Reel Fragment-->
    <string name="follow">Follow</string>

    <!--    Add detail fragment-->
    <string name="create_acc">Create</string>
    <string name="username">Username</string>
    <string name="detail_title">Create Username</string>
    <string name="detail_desc">Unleash your creativity</string>

    <!--    Reset Password-->
    <string name="reset_pass_title">Reset Password</string>
    <string name="reset_pass_desc">We\'ll send you verification link</string>

    <!--    Profile page-->
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="about">About</string>
    <string name="message">Message</string>
    <string name="recent_posts">Recent Posts</string>
    <string name="see_all">See all </string>
    <string name="edit_profile">Edit Profile</string>
    <string name="done_edit">Done</string>

    <!--    Chat activity-->
    <string name="enter_message">Enter Message</string>

    <!--    Accept request-->
    <string name="accept_request">Do you wanted to accept message request?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

    <!--    Profile account setting-->
    <string name="account_setting">Account setting</string>
    <string name="account_type">Account type</string>

    <!--    Manage account-->
    <string name="manage_account">Manage Accounts</string>
    <string name="add_acc">Add account</string>

    <!--    Chat activity menu-->
    <string name="contact">Contact</string>
    <string name="location">Location</string>
    <string name="explorer">Explorer</string>
    <string name="camera">Camera</string>

    <!--    Create post-->

    <string name="cancel">Cancel</string>
    <string name="post">Post</string>

    <!--    Backup Image-->
    <string name="image_not_found" tools:ignore="TypographyDashes">https://53.fs1.hubspotusercontent-na1.net/hub/53/hubfs/image8-2.jpg?width=595&amp;height=400&amp;name=image8-2.jpg</string>

    <string-array name="account_type_array">
        <item>PUBLIC</item>
        <item>PRIVATE</item>
        <item>NOT VISIBLE</item>
    </string-array>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="share_location">Share Location</string>

    <!--    Customize theme-->
    <string name="customize_title">Customize Theme</string>
    <string name="customize_title2">Select Primary Color</string>
    <string name="customize_title3">Select Theme</string>

    <!--    Alias-->
    <string name="alias_title">Give Alias for notification</string>
    <string name="remove_alias">Remove</string>

    <!--    Chat context menu-->
    <string name="copy">Copy</string>
    <string name="delete_from_me">Delete from me</string>
    <string name="delete_from_eve">Delete from Everyone</string>
    <string name="delete_all">Delete all chats</string>

    <!--    block accout-->
    <string name="block_title">Do you wanted to block this account?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_acc">Delete account\n</string>
    <string name="delete_acc_title">Re Authenticate</string>
    <string name="delete_acc_desc">Re authenticate yourself in order to delete your account, as this is your last account</string>
    <string name="delete_all_acc">Delete all accounts</string>
    <string name="delete_acc_google">Google account</string>
    <string name="delete_acc_mobile">Mobile Account\n</string>
    <string name="post_desc">Add Post</string>
    <string name="whisper_ai">Whisper AI</string>
    <string name="caption">Caption</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="settings">SETTINGS</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_desc">Enter your feedback here \n(It will be anonymous)</string>
    <string name="submit">SUBMIT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="report_bug">Report Bug</string>
    <string name="bug_desc">Help us by Reporting bug</string>
    <string name="bug_hint">Tell us about bug</string>
    <string name="report_bug_mobile">Name of your mobile company</string>
    <string name="report_bug_version">Android version, eg: 13</string>
    <string name="feedback_rating">Rate our app out of 5</string>
    <string name="followings">Followings</string>

</resources>
