<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.ReportBugFragment"
    android:orientation="vertical"
    android:background="?primary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_bug"
        android:textAllCaps="true"
        android:textSize="@dimen/_24ssp"
        android:layout_marginTop="@dimen/_40sdp"
        android:textColor="@color/white"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_40sdp"
        android:orientation="vertical"
        android:background="@drawable/tool_back">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TEXT"
                    android:layout_gravity="center"
                    android:text="@string/bug_desc"
                    android:textSize="@dimen/_17ssp" />

                <EditText
                    android:id="@+id/edt_bug_report_frag"
                    style="@style/EDITTEXT"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:hint="@string/bug_hint"
                    android:inputType="textMultiLine"
                    android:maxLength="500"
                    android:maxLines="10"
                    android:isScrollContainer="true" />

                <EditText
                    android:id="@+id/edt_bug_report_mobile_frag"
                    style="@style/EDITTEXT"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:hint="@string/report_bug_mobile"
                    android:inputType="text"
                    android:maxLength="20" />


                <EditText
                    android:id="@+id/edt_bug_report_os_frag"
                    style="@style/EDITTEXT"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:hint="@string/report_bug_version"
                    android:inputType="number"
                    android:maxLength="5" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_submit_bug"
                    style="@style/BUTTON_FILL"
                    android:text="@string/submit"
                    android:layout_marginTop="@dimen/_20sdp"/>


            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</LinearLayout>