<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    style="@style/BODY"
    android:orientation="vertical"
    tools:context="fragments.DeleteAccountFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_acc_title"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_40sdp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/_30ssp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_acc_desc"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="@dimen/_15ssp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/tool_back"
        android:layout_gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_email_del_acc"
                    style="@style/EDITTEXT"
                    android:hint="@string/email_hint"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/edt_pass_del_acc"
                    style="@style/EDITTEXT"
                    android:hint="@string/password_hint"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/txt_reset_pass_del_acc"
                    style="@style/TEXT"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_password"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textSize="@dimen/_14ssp"
                    android:gravity="end"
                    android:layout_gravity="center"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_del_acc_del"
                    style="@style/BUTTON_FILL"
                    android:text="@string/delete_acc"
                    android:layout_marginTop="@dimen/_20sdp"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>

