<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    style="@style/BODY"
    tools:context="fragments.CreateAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_280sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp"

            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_title"
                    android:textColor="@color/primary"
                    android:textAlignment="center"
                    android:textSize="@dimen/_40ssp"/>

                <EditText
                    android:id="@+id/edt_reg_email"
                    style="@style/EDITTEXT"
                    android:hint="@string/email_hint"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/edt_reg_password"
                    style="@style/EDITTEXT"
                    android:hint="@string/password_hint"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/edt_reg_con_password"
                    style="@style/EDITTEXT"
                    android:hint="@string/confirm_password"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="@dimen/_10sdp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_reg_verify"
                    style="@style/BUTTON_FILL"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:text="@string/verify_email" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_35sdp">

                    <LinearLayout
                        android:layout_width="@dimen/_105sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/line"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary"
                        android:textStyle="bold"
                        android:text="@string/another_option"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:textSize="@dimen/_17ssp" />

                    <LinearLayout
                        android:layout_width="@dimen/_105sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/line"/>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_reg_google"
                    style="@style/BUTTON_FILL"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:drawableStart="@drawable/google"
                    android:textSize="@dimen/_14ssp"
                    android:text="@string/google_register" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/TEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textSize="@dimen/_17ssp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reg_login"
            style="@style/BUTTON_OUTLINED"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/login"
            android:drawableEnd="@drawable/arrow_right"/>

    </LinearLayout>

</ScrollView>