<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    style="@style/BODY"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:layout_marginEnd="-20dp"
        android:background="@drawable/tool_back_card">

        <TextView
            android:id="@+id/btn_reg_login"
            android:layout_height="wrap_content"
            style="@style/TEXT"
            android:layout_width="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:text="@string/login_title"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:drawableEndCompat="@drawable/arrow_right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:layout_marginEnd="-20dp"
        android:background="@drawable/tool_back_card">

        <TextView
            android:id="@+id/btn_mobile_login"
            android:layout_height="wrap_content"
            style="@style/TEXT"
            android:layout_width="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:text="@string/mobile_register"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:drawableEndCompat="@drawable/arrow_right"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_40sdp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/_30ssp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_desc"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="@dimen/_15ssp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/tool_back"
        android:layout_gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_reg_email"
                    style="@style/EDITTEXT"
                    android:hint="@string/email_hint"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/edt_reg_password"
                    style="@style/EDITTEXT"
                    android:hint="@string/password_hint"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/edt_reg_con_password"
                    style="@style/EDITTEXT"
                    android:hint="@string/confirm_password"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="@dimen/_10sdp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_reg_verify"
                    style="@style/BUTTON_FILL"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/verify_email" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_20sdp">

                    <LinearLayout
                        android:layout_width="@dimen/_105sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/line"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TEXT"
                        android:textStyle="bold"
                        android:text="@string/another_option"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:textSize="@dimen/_17ssp" />

                    <LinearLayout
                        android:layout_width="@dimen/_105sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/line"/>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_reg_google"
                    style="@style/BUTTON_FILL"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_40sdp"
                    android:drawableStart="@drawable/google"
                    android:textSize="@dimen/_14ssp"
                    android:text="@string/google_register" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>