<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp"
    android:elevation="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_block_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?primary"
            android:textSize="@dimen/_16ssp"
            android:textAlignment="center"
            android:layout_margin="@dimen/_20sdp"
            android:text="@string/block_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_no_block_acc"
                style="@style/BUTTON_OUTLINED"
                android:text="@string/no"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_yes_block_acc"
                style="@style/BUTTON_FILL"
                android:text="@string/yes"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>