<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    android:background="?primary"
    android:id="@+id/ll_root_post_frag"
    tools:context="fragments.PostFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_post"
        android:textColor="@color/white"
        android:textSize="@dimen/_35ssp"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_40sdp"
        android:orientation="vertical"
        android:gravity="top|center"
        android:background="@drawable/tool_back">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_post_frag"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_250sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/edt_back"
            android:scaleType="fitXY"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txt_post_frag"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_250sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:gravity="center"
            android:backgroundTint="#CCCCCC"
            android:textSize="@dimen/_22ssp"
            android:background="@drawable/edt_back"
            android:textColor="?primary"
            android:text="@string/post_desc"/>

        <ProgressBar
            android:id="@+id/progress_post_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/edt_cap_post_frag"
            android:layout_width="@dimen/_250sdp"
            style="@style/EDITTEXT"
            android:layout_marginTop="@dimen/_30sdp"
            android:hint="@string/caption"
            android:maxLength="20"
            android:background="@drawable/edt_back"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_20sdp">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/BUTTON_OUTLINED"
                android:id="@+id/btn_cancel_post_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:text="@string/cancel"/>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/BUTTON_FILL"
                android:id="@+id/btn_post_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/post"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>